'完善结果跳转'

--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    "pages/msg/msgfail",
+    "pages/msg/msgsuccess",
     "pages/newadd/newadd",
     "pages/index/index",
     "pages/edit/edit"
